--- a/BinckChatBot/BinckChatBot.csproj
+++ b/BinckChatBot/BinckChatBot.csproj
@@ -106,6 +106,8 @@
       <HintPath>..\packages\Microsoft.AspNet.WebApi.WebHost.5.2.3\lib\net45\System.Web.Http.WebHost.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="System.Windows.Forms" />
+    <Reference Include="System.Windows.Forms.DataVisualization" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Web.Services" />
@@ -132,6 +134,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Graphics\GraphCreator.cs" />
     <Compile Include="Interface1.cs" />
     <Compile Include="IntrinionApi\INConsts.cs" />
     <Compile Include="IntrinionApi\IntrinioApiService.cs" />
